--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MPSproto
 Type: Package
 Title: A Quantitative Model for MPS data with complex stutters
-Version: 0.8.1
-Date: 2022-07-29
+Version: 0.9.2
+Date: 2023-08-23
 Author: Oyvind Bleka <oyvble@hotmail.com>
 Maintainer: Oyvind Bleka <oyvble@hotmail.com>
 Description: Contains procedures for calibrating MPS models which can be used for mixture interpretation.
@@ -10,5 +10,6 @@ NeedsCompilation: yes
 License: GPL(>=2)
 Depends: R (>= 3.5.0)	
 Suggests: 
-	betareg, ggplot2, plotly, stringi, testthat
+	betareg, ggplot2, plotly, stringi, testthat,
+	gWidgets2, plotrix, LUSstrR
 RoxygenNote: 6.1.1
